// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders xlf from markdown renders autolink wrapped in <g> and <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Предложение номер один <x ctype=\\"x-link_autolink\\" equiv-text=\\"&lt;https://www.google.com&gt;\\" />.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер два <x ctype=\\"x-link_autolink\\" equiv-text=\\"&lt;https://www.youtube.com&gt;\\" />.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders code wrapped in <g> tag 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <g ctype=\\"x-code\\" equiv-text=\\"\`\\">один</g>.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер <g ctype=\\"x-code\\" equiv-text=\\"\`\\">два</g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders em wrapped in <g> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <g ctype=\\"x-em\\" equiv-text=\\"*\\">один</g>.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер <g ctype=\\"x-em\\" equiv-text=\\"*\\">два</g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders file wrapped in <g> and <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Sentence with <g ctype=\\"x-file\\" equiv-text=\\"{%%}\\"><x ctype=\\"x-file_src\\" equiv-text=\\" src=&quot;path/to/file&quot;\\" /><g ctype=\\"x-file_name\\" equiv-text=\\"&quot;&quot;\\">readme.md</g><x ctype=\\"x-file_referrerpolicy\\" equiv-text=\\" referrerpolicy=&quot;no-referrer&quot;\\" /><x ctype=\\"x-file_rel\\" equiv-text=\\" rel=&quot;noopener&quot;\\" /><x ctype=\\"x-file_target\\" equiv-text=\\" target=&quot;_blank&quot;\\" /><x ctype=\\"x-file_type\\" equiv-text=\\" type=&quot;text/plain&quot;\\" /></g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders heading with anchors wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Heading with anchors<x ctype=\\"x-anchor\\" equiv-text=\\" {#anchor1}\\" /><x ctype=\\"x-anchor\\" equiv-text=\\" {#anchor2}\\" /></source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders html wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Sentence<x ctype=\\"x-html_inline\\" equiv-text=\\"&lt;br&gt;\\" />with <x ctype=\\"x-html_inline\\" equiv-text=\\"&lt;b&gt;\\" />html<x ctype=\\"x-html_inline\\" equiv-text=\\"&lt;/b&gt;\\" />.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders image with href, title and size wrapped in <g> and <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Sentence <g ctype=\\"x-image_text_part\\" equiv-text=\\"![]\\">image</g><g ctype=\\"x-image_attributes_part\\" equiv-text=\\"()\\"><x ctype=\\"x-image_attributes_src\\" equiv-text=\\"image.png\\" /><g ctype=\\"x-image_attributes_title\\" equiv-text=\\"&quot;&quot;\\">hint</g><x ctype=\\"x-image_attributes_size\\" equiv-text=\\"=100x100\\" /></g>.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Sentence <g ctype=\\"x-image_text_part\\" equiv-text=\\"![]\\">image</g><g ctype=\\"x-image_attributes_part\\" equiv-text=\\"()\\"><x ctype=\\"x-image_attributes_src\\" equiv-text=\\"image.png\\" /><g ctype=\\"x-image_attributes_title\\" equiv-text=\\"&quot;&quot;\\">hint</g><x ctype=\\"x-image_attributes_size\\" equiv-text=\\"=x100\\" /></g>.</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>Sentence <g ctype=\\"x-image_text_part\\" equiv-text=\\"![]\\">image</g><g ctype=\\"x-image_attributes_part\\" equiv-text=\\"()\\"><x ctype=\\"x-image_attributes_src\\" equiv-text=\\"image.png\\" /><g ctype=\\"x-image_attributes_title\\" equiv-text=\\"&quot;&quot;\\">hint</g><x ctype=\\"x-image_attributes_size\\" equiv-text=\\"=100x\\" /></g>.</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>Sentence <g ctype=\\"x-image_text_part\\" equiv-text=\\"![]\\">image</g><g ctype=\\"x-image_attributes_part\\" equiv-text=\\"()\\"><x ctype=\\"x-image_attributes_src\\" equiv-text=\\"image.png\\" /><x ctype=\\"x-image_attributes_size\\" equiv-text=\\"=100x100\\" /></g>.</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>Sentence <g ctype=\\"x-image_text_part\\" equiv-text=\\"![]\\">image</g><g ctype=\\"x-image_attributes_part\\" equiv-text=\\"()\\"><x ctype=\\"x-image_attributes_src\\" equiv-text=\\"image.png\\" /><g ctype=\\"x-image_attributes_title\\" equiv-text=\\"&quot;&quot;\\">hint</g></g>.</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>Sentence <g ctype=\\"x-image_text_part\\" equiv-text=\\"![]\\">image</g><g ctype=\\"x-image_attributes_part\\" equiv-text=\\"()\\"><x ctype=\\"x-image_attributes_src\\" equiv-text=\\"image.png\\" /></g>.</source>
      </trans-unit>
      <trans-unit id=\\"7\\">
        <source>Sentence <g ctype=\\"x-image_text_part\\" equiv-text=\\"![]\\"></g><g ctype=\\"x-image_attributes_part\\" equiv-text=\\"()\\"></g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders links wrapped in <g> and <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <g ctype=\\"x-link_text_part\\" equiv-text=\\"[]\\">один</g><g ctype=\\"x-link_attributes_part\\" equiv-text=\\"()\\"><x ctype=\\"x-link_attributes_href\\" equiv-text=\\"one.md\\" /><g ctype=\\"x-link_attributes_title\\" equiv-text=\\"&quot;&quot;\\">one</g></g>.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер <g ctype=\\"x-link_text_part\\" equiv-text=\\"[]\\">два</g><g ctype=\\"x-link_attributes_part\\" equiv-text=\\"()\\"><x ctype=\\"x-link_attributes_href\\" equiv-text=\\"two.md\\" /></g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders liquid conditions wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Sentence with <x ctype=\\"x-liquid_If\\" equiv-text=\\"{% if var == &quot;val&quot; %}\\" /> val <x ctype=\\"x-liquid_Else\\" equiv-text=\\"{% else %}\\" /> other val <x ctype=\\"x-liquid_EndIf\\" equiv-text=\\"{% endif %}\\" />.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source><x ctype=\\"x-liquid_If\\" equiv-text=\\"{% if var == &quot;val&quot; %}\\" /> A <x ctype=\\"x-liquid_Else\\" equiv-text=\\"{% else %}\\" /> B <x ctype=\\"x-liquid_EndIf\\" equiv-text=\\"{% endif %}\\" /> Point.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders liquid filters wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Sentence with filter <x ctype=\\"x-liquid_Filter\\" equiv-text=\\"{{ users | length }}\\" />.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source><x ctype=\\"x-liquid_Filter\\" equiv-text=\\"{{user | capitalize}}\\" /> starts with filter.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders liquid filters wrapped in <x> tags inside tables 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Heading one</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Heading two</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>Cell with <x ctype=\\"x-liquid_Filter\\" equiv-text=\\"{{ variable | length }}\\" /></source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>Cell with <x ctype=\\"x-liquid_Variable\\" equiv-text=\\"{{ variable }}\\" /></source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders liquid functions wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Sentence with function <x ctype=\\"x-liquid_Function\\" equiv-text=\\"{{ user.name.slice(1, 2) }}\\" />.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source><x ctype=\\"x-liquid_Function\\" equiv-text=\\"{{ user.name.slice(1, 2) }}\\" /> starts with function.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders liquid loops wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Sentence <x ctype=\\"x-liquid_ForInLoop\\" equiv-text=\\"{% for x in xs %}\\" /> x <x ctype=\\"x-liquid_EndForInLoop\\" equiv-text=\\"{% endfor %}\\" />.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source><x ctype=\\"x-liquid_ForInLoop\\" equiv-text=\\"{% for x in xs %}\\" /> X <x ctype=\\"x-liquid_EndForInLoop\\" equiv-text=\\"{% endfor %}\\" /> cool.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders liquid variables wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Sentence with <x ctype=\\"x-liquid_Variable\\" equiv-text=\\"{{ variable }}\\" />.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source><x ctype=\\"x-liquid_Variable\\" equiv-text=\\"{{variable}}\\" /> sentence.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders plain text 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Предложение номер один.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер два.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders plain text sentences separated by newline 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Предложение номер один.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер два.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders ref links wrapped in <g> and <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <x ctype=\\"x-link_reflink\\" equiv-text=\\"[{#T}]\\" /><g ctype=\\"x-link_attributes_part\\" equiv-text=\\"()\\"><x ctype=\\"x-link_attributes_href\\" equiv-text=\\"one.md\\" /><g ctype=\\"x-link_attributes_title\\" equiv-text=\\"&quot;&quot;\\">one</g></g>.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер <x ctype=\\"x-link_reflink\\" equiv-text=\\"[{#T}]\\" /><g ctype=\\"x-link_attributes_part\\" equiv-text=\\"()\\"><x ctype=\\"x-link_attributes_href\\" equiv-text=\\"two.md\\" /></g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders s wrapped in <g> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <g ctype=\\"x-s\\" equiv-text=\\"~~\\">один</g>.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер <g ctype=\\"x-s\\" equiv-text=\\"~~\\">два</g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders samp wrapped in <g> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <g ctype=\\"x-samp\\" equiv-text=\\"##\\">один</g>.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер <g ctype=\\"x-samp\\" equiv-text=\\"##\\">два</g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders strong wrapped in <g> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <g ctype=\\"x-strong\\" equiv-text=\\"**\\">один</g>.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер <g ctype=\\"x-strong\\" equiv-text=\\"**\\">два</g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders sup wrapped in <g> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Предложение номер<g ctype=\\"x-sup\\" equiv-text=\\"^\\">один</g>.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер<g ctype=\\"x-sup\\" equiv-text=\\"^\\">два</g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders variable href link wrapped in <g> and <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <g ctype=\\"x-link_text_part\\" equiv-text=\\"[]\\">один</g><g ctype=\\"x-link_attributes_part\\" equiv-text=\\"()\\"><x ctype=\\"x-link_attributes_href\\" equiv-text=\\"{{one}}\\" /><g ctype=\\"x-link_attributes_title\\" equiv-text=\\"&quot;&quot;\\">one</g></g>.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер <g ctype=\\"x-link_text_part\\" equiv-text=\\"[]\\">два</g><g ctype=\\"x-link_attributes_part\\" equiv-text=\\"()\\"><x ctype=\\"x-link_attributes_href\\" equiv-text=\\"{{two}}\\" /></g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`renders xlf from markdown renders video wrapped in <x> tag 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Sentence goes here.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Another sentence <x ctype=\\"x-video\\" equiv-text=\\"@[youtube](rJz4OaURJ6U)\\" /></source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;
